--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "appmode": "static",
     "primary_rmd": null,
     "primary_html": "index.html",
-    "content_category": null,
+    "content_category": "site",
     "has_parameters": false
   },
   "packages": null,
