update chapter eight

--- a/manifest.json
+++ b/manifest.json
@@ -75,7 +75,7 @@
       "checksum": "806ab0467ea8b51e6248f2cc567b4827"
     },
     "index.html": {
-      "checksum": "c9cbbe4222ed8039c47b0166dd92b824"
+      "checksum": "4fc9a60ccc346ecc26f31bce02dd269d"
     },
     "libs/accessible-code-block-0.0.1/empty-anchor.js": {
       "checksum": "53c42ac72d71beb8e6dbffe86ab543d6"
@@ -201,31 +201,34 @@
       "checksum": "7cdf7213010e36ed54167d37b169766a"
     },
     "reference-keys.txt": {
-      "checksum": "e792674f8a4158ff44950c33e82a9445"
+      "checksum": "4f12d21ebd65fdf252895ce5563f551a"
     },
     "search_index.json": {
-      "checksum": "f7514a21729592d51aa778502a9a4b31"
+      "checksum": "ca18016d7015fe106a2f1d3e104e7713"
     },
     "style.css": {
       "checksum": "19f0b33dc27d4f748874d2cde5cea5bc"
     },
+    "第八章-秩转换的非参数检验.html": {
+      "checksum": "f3bb9052db2dd392fa7515b7db3729a2"
+    },
     "第二章-计量资料的统计描述.html": {
-      "checksum": "a83bc121b709570c4c015552e393063b"
+      "checksum": "05d7d0ce55e37242b5ae5a35d9677fac"
     },
     "第六章-计数资料的统计描述.html": {
-      "checksum": "ab1c934654185ff7bd9c84cdfca2a196"
+      "checksum": "0059972b26f8c61671542b7b225748c8"
     },
     "第七章-chi2检验.html": {
-      "checksum": "c001b319cea306d8e13c63b072c572cd"
+      "checksum": "c6fbf2a1bdaa0ae5fef386daef287423"
     },
     "第三章-总体均数的估计与假设检验.html": {
-      "checksum": "b665fab8fae32f328419a19c81e79114"
+      "checksum": "b2f79906912c0a6376de15c7b780be88"
     },
     "第四章-多个样本均数比较的方差分析.html": {
-      "checksum": "49f38c9179bd4ddb78844914b0a74e36"
+      "checksum": "cbf4eb3eaf4903af23d803b2cd512c99"
     },
     "第五章-计数资料的统计描述.html": {
-      "checksum": "706c98f1988a9fb019403863b82ca4c9"
+      "checksum": "3138e8679942e66ce81b41c3b2e46722"
     }
   },
   "users": null
